--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,20 @@ services:
       - db-net
     restart: unless-stopped
 
+#  keycloak:
+#    container_name: keycloak
+#    image: quay.io/keycloak/keycloak:19.0.2
+#    environment:
+#      KEYCLOAK_ADMIN: admin
+#      KEYCLOAK_ADMIN_PASSWORD: admin
+#    ports:
+#      - 8080:8081
+#    networks:
+#      - db-net
+#    restart: unless-stopped
+#    command:
+#      start-dev
+
 networks:
 
   db-net:
